--- a/client/views/footer/footer.html
+++ b/client/views/footer/footer.html
@@ -8,10 +8,11 @@
 <div class="footer_top_agileits">
     <div class="container" style="padding-bottom: 2em;">
         <div class="col-md-8 footer_grid about">
-            <h3>About Us</h3>
-            <p>Nam libero tempore cum vulputate id est id, pretium semper enim. Morbi viverra congue nisi vel pulvinar posuere sapien
-                eros.
-            </p>
+            <h3>BkConnect</h3>
+			<p>BkConnect là hệ thống cho phép các doanh nghiệp có thể cập nhật các thông tin của công ty, đăng bài tuyển dụng và nhận
+				trực tiếp đơn apply của sinh viên</p>
+			<p>Các sinh viên tham gia vào hệ thống có thể cập nhật thông tin profile và gửi profile cho các nhà tuyển dụng để apply công
+				việc mình mong muốn.</p>
         </div>
         <div class="col-md-4 footer_grid contact">
             <h3 style="padding-left: 35px;">Contact Info</h3>
