--- a/client/views/student/profile.html
+++ b/client/views/student/profile.html
@@ -121,7 +121,7 @@
                 <div class="title"><i class="fa fa-fw fa-fighter-jet"></i>Mục tiêu</div>
                 <div class="form-group content">
                   <div class="col-md-8">
-                    <textarea class="form-control" ng-model="user.education" type="text" rows="3"></textarea>
+                    <textarea class="form-control" ng-model="user.objective" type="text" rows="3"></textarea>
                   </div>
                 </div>
               </div>
