--- a/client/company/views/css/cv.css
+++ b/client/company/views/css/cv.css
@@ -15,18 +15,16 @@ body a{
   text-decoration: none;
   color: black;
 }
-#modal-title{
-    text-align: center;
+label {
+    display: inline-block;
+    margin-bottom: 5px;
     font-weight: bold;
-    color: red;
 }
 .site-content{
   margin-top: 20px;
 }
 .wp-post-image{
   margin: 10px;
-  margin-left: 70px;
-  margin-bottom: 30px;
   padding: 5px;
   width: 150px;
   height: 150px;
@@ -36,12 +34,7 @@ body a{
 .information{
   background-color: #fff;
   text-decoration: none;
-  max-width: 800px;
-  padding-left: 30px;
-}
-.information:hover{
-  box-shadow: 0 0px 1px rgb(168, 168, 168), 0 1px 2px rgba(0, 0, 0, .24);
-  margin-bottom: 2em;
+  max-width: 500px;
 }
 .information .title{
    padding: 10px 20px;
@@ -53,7 +46,7 @@ body a{
   width: 10%;
 }
 .information .content{
-  padding: 20px;
+  padding: 20px 20px 30px 30px;
 }
 .information .content li:before {
   content: "\f00c"; /* FontAwesome Unicode */
@@ -64,7 +57,7 @@ body a{
 }
 .general{
   border:  2px ;
-  padding: 50px 80px;
+  padding: 50px 0px;
 }
 .general .name{
   color: orange;
@@ -78,7 +71,7 @@ body a{
   font-family: FontAwesome;
   display: inline-block;
   margin-left: -1.3em; /* same as padding-left set on li */
-  width: 2em; /* same as padding-left set on li */
+  width: 1.3em; /* same as padding-left set on li */
 }
 .application-command{
   float: center;
