--- a/client/views/company/index.html
+++ b/client/views/company/index.html
@@ -15,13 +15,13 @@
 <!-- body -->
 <section id="home" class="cp_tab_content cp_herro_banner">
 	<div class="cp_herro_banner_gray" style="height: 100px;"></div>
-	<img src="{{companyInfo.cover}}" class="cp_herro_banner_image">
+	<img ngf-thumbnail="companyInfo.cover || 'views/home/images/cover-default.jpg'" class="cp_herro_banner_image">
 </section>
 <div class="container">
 	<div class="row" style="border-bottom: 2px solid #F67011; padding-bottom: 30px">
 		<div class="col-xs-12 col-sm-2 col-md-2 col-lg-2 cp_logo  mobile-hide">
 			<div>
-				<img ng-src="{{companyInfo.logo}}" />
+				<img ngf-thumbnail="companyInfo.logo || 'views/home/images/logo1.png'" />
 
 				<!-- <img src="views/company/images/banner1.png" alt=""> -->
 			</div>
@@ -222,28 +222,6 @@
 </div>
 
 <!-- body -->
-<!-- footer -->
-<div class="footer-top">
-	<div class="container">
-		<div class="col-md-8 footerleft">
-			<h3>BkConnect</h3>
-			<p>BkConnect là hệ thống cho phép các doanh nghiệp có thể cập nhật các thông tin của công ty, đăng bài tuyển dụng và nhận
-				trực tiếp đơn apply của sinh viên</p>
-			<p>Các sinh viên tham gia vào hệ thống có thể cập nhật thông tin profile và gửi profile cho các nhà tuyển dụng để apply công
-				việc mình mong muốn.</p>
-		</div>
-		<div class="col-md-4 footerright">
-			<h3>Nhóm phát triển</h3>
-			<p class="phone">phone: +0(21) 334 5678</p>
-			<p class="phone">Fax: +0(21) 334 5678</p>
-			<p class="phone">Mail:
-				<a href="mailto:bkconnect@gmail.com">bkconnect@gmail.com</a>
-			</p>
-		</div>
-	</div>
-	<br>
-</div>
-<!-- footer -->
 </div>
 </div>
 </div>
