--- a/client/views/student/verified.html
+++ b/client/views/student/verified.html
@@ -1,2 +1,15 @@
-<h1>Registration verified successfully</h1>
-You are now ready to <a href="/">log in</a>.
+<head>
+    <link href="vendor/bootstrap/dist/css/bootstrap.css" rel="stylesheet" type="text/css" media="all">
+    <link href="views/home/css/style.css" rel="stylesheet" type="text/css" media="all" />
+</head>
+
+<div class="row">
+    <div style="height: 100px"></div>
+    <div class="col-md-10 col-md-offset-2" style="float: none;">
+        <h1>Registration verified successfully</h1>
+        You are now ready to
+        <a href="/">log in</a>.
+    </div>
+    <div style="height: 100px"></div>
+
+</div>
