--- a/client/views/home/index.html
+++ b/client/views/home/index.html
@@ -72,18 +72,15 @@
 	<h2>Start your job search</h2>
 	<form action="#" method="post">
 		<input type="text" name="Enter Keyword(s)" placeholder="Enter Keyword(s)" required="">
-		<select id="country12" onchange="change_country(this.value)" class="frm-field required">
+		<select id="country12" class="frm-field required">
 			<option value="null"> Select Category</option>
-			<option value="city">Banking</option>
-			<option value="city">Finance</option>
-			<option value="city">It</option>
-			<option value="city">Specialists</option>
-
+			<option ng-repeat="option in listCareer" value="{{option.idcareer}}">{{option.name}}</option>
 		</select>
 		<input type="submit" value="Find Jobs">
 		<div class="clearfix"></div>
 	</form>
 </div>
+
 <div class="inner_content_info_agileits">
 	<div class="container">
 		<div class="tittle_head_w3ls">
@@ -98,12 +95,12 @@
 								<a href="#home" id="home-tab" role="tab" data-toggle="tab" aria-controls="home" aria-expanded="true">Công việc gần đây</a>
 							</li>
 							<li role="presentation">
-								<a href="#profile" role="tab" id="profile-tab" data-toggle="tab" aria-controls="profile">Việc bạn đang theo dõi</a>
+								<a href="#follow" role="tab" id="profile-tab" data-toggle="tab" aria-controls="profile">Việc bạn đang theo dõi</a>
 							</li>
 						</ul>
 						<div id="myTabContent" class="tab-content">
 							<div role="tabpanel" class="tab-pane fade in active" id="home" aria-labelledby="home-tab">
-								<div ng-repeat="post in listPost">
+								<div ng-repeat="post in listPost | limitTo :limit">
 									<div class="tab_grid">
 										<div class="col-sm-3 loc_1">
 											<a href="/companies/{{post.idcompany}}">
@@ -126,17 +123,14 @@
 												</p>
 												<p>
 													<span class="m_2">Lương : </span>{{post.salary}}
+													<span class="m_2"> | Địa điểm : </span>{{post.address}}
+
 												</p>
 												<p>
-													<span class="m_2">Hạn đăng ký : </span>{{post.expired | date:'dd/MM/yyyy'}}
+													<span class="m_2">Ngày đăng : </span>{{post.created | date:'dd/MM/yyyy'}}
+													<span class="m_2"> | Hạn đăng ký : </span>{{post.expired | date:'dd/MM/yyyy'}}
 												</p>
 												<ul class="links_bottom">
-													<li>
-														<a href="location_single.html">
-															<i class="fa fa-envelope-o icon_1"> </i>
-															<span class="icon_text"> Nộp CV </span>
-														</a>
-													</li>
 													<li>
 														<a href="/post/{{post.idpost}}">
 															<i class="fa fa-eye icon_1"> </i>
@@ -153,12 +147,16 @@
 												</ul>
 											</div>
 										</div>
+
 										<div class="clearfix"> </div>
 									</div>
 								</div>
+								<div id="loadMore" ng-click="loadMore()" ng-hide="limit==listPost.length">
+									<button class="btn btn-primary btn-lg">Load More</button>
+								</div>
 							</div>
 
-							<div role="tabpanel" class="tab-pane fade" id="profile" aria-labelledby="profile-tab">
+							<div role="tabpanel" class="tab-pane fade" id="follow" aria-labelledby="profile-tab">
 
 								<div class="tab_grid">
 									<div class="col-sm-3 loc_1">
@@ -294,38 +292,20 @@
 				<h5 class="widget-title">Công ty nổi bật</h5>
 				<div class="widget-content">
 					<ul class="list_2">
-						<li>
+						<li ng-repeat="company in listComTop">
 							<div class="friends-grids">
 								<div class="grids-left">
-									<a href="">
-										<img src="views/home/images/banner4.jpg" style="width: 65px; height: 65px;" />
+									<a href="/companies/{{company.idcompany}}">
+										<img ngf-thumbnail="company.logo || 'views/home/images/logo1.png'" style="width: 65px; height: 65px;" />
 									</a>
 								</div>
 								<div class="grids-right">
-									<h2>FPT Software</h2>
+									<h2>{{company.name}}</h2>
 								</div>
 							</div>
 						</li>
-						<li>
-							<div class="friends-grids">
-								<div class="grids-left">
-									<img src="views/home/images/c5.gif" style="width: 65px; height: 65px;" />
-								</div>
-								<div class="grids-right">
-									<h2>Magestore</h2>
-								</div>
-							</div>
-						</li>
-						<li>
-							<div class="friends-grids">
-								<div class="grids-left">
-									<img src="views/home/images/banner1.jpg" style="width: 65px; height: 65px;" />
-								</div>
-								<div class="grids-right">
-									<h2>Vina Acecook</h2>
-								</div>
-							</div>
-						</li>
+						<a href="/companies" >Xem thêm</a>
+						
 					</ul>
 				</div>
 			</div>
@@ -369,37 +349,13 @@
 				</ul>
 			</div>
 			<div class="col_3 permit">
-					<h3>Jobs by Category</h3>
-					<ul class="list_2">
-						<li>
-							<a href="#">Railway Recruitment</a>
-						</li>
-						<li>
-							<a href="#">Air Force Jobs</a>
-						</li>
-						<li>
-							<a href="#">Police Jobs</a>
-						</li>
-						<li>
-							<a href="#">Intelligence Bureau Jobs</a>
-						</li>
-						<li>
-							<a href="#">Army Jobs</a>
-						</li>
-						<li>
-							<a href="#">Navy Jobs</a>
-						</li>
-						<li>
-							<a href="#">BSNL Jobs</a>
-						</li>
-						<li>
-							<a href="#">Software Jobs</a>
-						</li>
-						<li>
-							<a href="#">Research Jobs</a>
-						</li>
-					</ul>
-				</div>
+				<h3>Jobs by Category</h3>
+				<ul class="list_2">
+					<li ng-repeat="option in listCareer">
+						<a href="#">{{option.name}}</a>
+					</li>
+				</ul>
+			</div>
 		</div>
 		<div class="clearfix"></div>
 	</div>
