--- a/client/views/footer/footer.html
+++ b/client/views/footer/footer.html
@@ -36,7 +36,7 @@
                     <a >
                         <img src="views/home/images/logo1.png" class="img-responsive" alt="">
                     </a>
-                    <p>© 2017 Soft. All rights reserved | Design by <a href="/home">BKConnect</a></p>
+                    <p>© 2017 BKConnect. All rights reserved | Design by <a href="/home">BKConnect</a></p>
                 </div>
             </div>
             <div class="col-md-4 footer_bottom_grid">
