--- a/client/views/home/index.html
+++ b/client/views/home/index.html
@@ -158,126 +158,59 @@
 
 							<div role="tabpanel" class="tab-pane fade" id="follow" aria-labelledby="profile-tab">
 
-								<div class="tab_grid">
-									<div class="col-sm-3 loc_1">
-										<a href="location_single.html">
-											<img src="images/loc3.jpg" alt="">
-										</a>
-									</div>
-									<div class="col-sm-9">
-										<div class="location_box1">
-											<h6>
-												<a href="location_single.html">Icorrupti quos </a>
-												<span class="m_1">Posted 5 hours ago</span>
-											</h6>
-											<p>
-												<span class="m_2">Location : </span>On the other hand, we denounce with righteous indignation and dislike men who are so beguiled
-												and demoralized by the charms of pleasure</p>
-											<ul class="links_bottom">
-												<li>
-													<a href="location_single.html">
-														<i class="fa fa-envelope-o icon_1"> </i>
-														<span class="icon_text"> Email this Job</span>
-													</a>
-												</li>
-												<li>
-													<a href="location_single.html">
-														<i class="fa fa-eye icon_1"> </i>
-														<span class="icon_text">View full Job Description</span>
-													</a>
-												</li>
-												<li class="last">
-													<a href="location_single.html">
-														<span class="icon_text">More
-															<i class="fa fa-caret-right icon_1"> </i>
-														</span>
-													</a>
-												</li>
-											</ul>
-										</div>
-									</div>
-									<div class="clearfix"> </div>
+								<div ng-if="!authen" class="tab_grid">
+									<strong> Xin lỗi ! Bạn cần đăng nhập để xem tính năng này ! </strong>
 								</div>
-								<div class="tab_grid">
-									<div class="col-sm-3 loc_1">
-										<a href="location_single.html">
-											<img src="views/company/images/logo1.png" alt="">
-										</a>
-									</div>
-									<div class="col-sm-9">
-										<div class="location_box1">
-											<h6>
-												<a href="location_single.html">therefore always </a>
-												<span class="m_1">Posted 5 hours ago</span>
-											</h6>
-											<p>
-												<span class="m_2">Location : </span>On the other hand, we denounce with righteous indignation and dislike men who are so beguiled
-												and demoralized by the charms of pleasure</p>
-											<ul class="links_bottom">
-												<li>
-													<a href="location_single.html">
-														<i class="fa fa-envelope-o icon_1"> </i>
-														<span class="icon_text"> Email this Job</span>
-													</a>
-												</li>
-												<li>
-													<a href="location_single.html">
-														<i class="fa fa-eye icon_1"> </i>
-														<span class="icon_text">View full Job Description</span>
-													</a>
-												</li>
-												<li class="last">
-													<a href="location_single.html">
-														<span class="icon_text">More
-															<i class="fa fa-caret-right icon_1"> </i>
-														</span>
-													</a>
-												</li>
-											</ul>
+								<div ng-repeat="post in listPostFollow | limitTo :limit" ng-if="authen">
+									<div class="tab_grid">
+										<div class="col-sm-3 loc_1">
+											<a href="/companies/{{post.idcompany}}">
+												<img src="{{post.logoCom}}" alt="">
+											</a>
 										</div>
-									</div>
-									<div class="clearfix"> </div>
-								</div>
+										<div class="col-sm-9">
+											<div class="location_box1">
+												<h6>
+													<a href="/post/{{post.idpost}}"> {{post.title}}</a>
+												</h6>
+												<p>
+													<span class="m_2">Công ty : </span>
+													<a href="/companies/{{post.idcompany}}">
+														<strong>{{post.nameCom}} </strong>
+													</a>|
+													<span class="m_2">Loại công việc: </span>{{post.category}}
+												</p>
+												<p>
+												</p>
+												<p>
+													<span class="m_2">Lương : </span>{{post.salary}}
+													<span class="m_2"> | Địa điểm : </span>{{post.address}}
 
-								<div class="tab_grid last">
-									<div class="col-sm-3 loc_1">
-										<a href="location_single.html">
-											<img src="views/company/images/banner1.png" alt="">
-										</a>
-									</div>
-									<div class="col-sm-9">
-										<div class="location_box1">
-											<h6>
-												<a href="#"> blame belongs </a>
-												<span class="m_1">Posted 5 hours ago</span>
-											</h6>
-											<p>
-												<span class="m_2">Location : </span>On the other hand, we denounce with righteous indignation and dislike men who are so beguiled
-												and demoralized by the charms of pleasure</p>
-											<ul class="links_bottom">
-												<li>
-													<a href="location_single.html">
-														<i class="fa fa-envelope-o icon_1"> </i>
-														<span class="icon_text"> Email this Job</span>
-													</a>
-												</li>
-												<li>
-													<a href="location_single.html">
-														<i class="fa fa-eye icon_1"> </i>
-														<span class="icon_text">View full Job Description</span>
-													</a>
-												</li>
-												<li class="last">
-													<a href="location_single.html">
-														<span class="icon_text">More
-															<i class="fa fa-caret-right icon_1"> </i>
-														</span>
-													</a>
-												</li>
-											</ul>
+												</p>
+												<p>
+													<span class="m_2">Ngày đăng : </span>{{post.created | date:'dd/MM/yyyy'}}
+													<span class="m_2"> | Hạn đăng ký : </span>{{post.expired | date:'dd/MM/yyyy'}}
+												</p>
+												<ul class="links_bottom">
+													<li>
+														<a href="/post/{{post.idpost}}">
+															<i class="fa fa-eye icon_1"> </i>
+															<span class="icon_text">Xem chi tiết bài đăng</span>
+														</a>
+													</li>
+													<li class="last">
+														<a href="/post/{{post.idpost}}">
+															<span class="icon_text">MORE
+																<i class="fa fa-caret-right icon_1"> </i>
+															</span>
+														</a>
+													</li>
+												</ul>
+											</div>
 										</div>
+
+										<div class="clearfix"> </div>
 									</div>
-									<div class="clearfix"> </div>
 								</div>
 
 							</div>
@@ -304,13 +237,13 @@
 								</div>
 							</div>
 						</li>
-						<a href="/companies" >Xem thêm</a>
-						
+						<a href="/companies">Xem thêm</a>
+
 					</ul>
 				</div>
 			</div>
 
-			<div class="col_3 permit">
+			<div class="col_3 permit" ng-if="authen">
 				<h3>Các công ty follow</h3>
 				<ul class="list_2">
 					<li>
